# ghost-coder

./: .bumpversion.toml  .gitignore  Ghost Coder.bat  Ghost Coder.spec  README.md  pyproject.toml
.build/: auto-py-to-exe.json  launcher.bat
.imgs/: ghost_coder.psd
.old/: inspector.py  state.py
.old/classes/: mqtt_client.py
.pocs/: app.py  check_utf8.py  demo1.py  null_bytes.py  timer.txt  zeromq_example.py
src/ghost_coder/: app.py  broker.py  data.py  file_selector.py  inspector.py  listener.py  listener.py.zmq_backup  state.py  typer.py  utils.py
